👍 通報UIを作成
